--- a/src/app/component/content/content.component.html
+++ b/src/app/component/content/content.component.html
@@ -2,11 +2,12 @@
 <div class="menubar">
     <h2 > Menu</h2>
   <p-tieredMenu [model]="items">
-      
+    <ng-content></ng-content>    
   </p-tieredMenu>
   </div>
   <div class="display">
   <div class="page-content">
       <router-outlet></router-outlet>
+      
   </div>
-  
+ 
