--- a/src/app/component/dialog/dialog.component.html
+++ b/src/app/component/dialog/dialog.component.html
@@ -1,46 +1,57 @@
-<h1 mat-dialog-title> Register</h1>
+<h1 > Register</h1>
 <form [formGroup]="productForm">
-<div mat-dialog-content>
-    
-    <mat-form-field appearance="outline">
-        <mat-label>Your Name</mat-label>
-        <input formControlName="usename" matInput placeholder="Usename">
-      </mat-form-field>
+<div p-dialog-content>
+  <h3>Usenamer</h3>
+  <div class="col-12 md:col-4">
+    <div class="p-inputgroup">
+        <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+        <input formControlName="usename" style="width: 300px;" type="text" pInputText placeholder="Username">         
+    </div>
+</div>
       <div *ngIf="productForm.get('usename')?.errors && productForm.get('usename')?.touched">
-        <p *ngIf="productForm.get('usename')?.errors['required']">Username is required</p>
-        <p *ngIf="productForm.get('usename')?.errors['minlength']">Username must long on 5 character</p>
+        <p  style="color: red;" *ngIf="productForm.get('usename')?.errors['required']">Username is required</p>
+        <p style="color: red;" *ngIf="productForm.get('usename')?.errors['minlength']">Username must long on 5 character</p>
       </div>
-      <br>     
-      <mat-label>Sex</mat-label>
-    <p-selectButton formControlName="sex" [(ngModel)]="value1" [options]="stateOptions"  optionLabel="label" optionValue="value"></p-selectButton> 
-      <mat-label>Date of birth</mat-label>
       <br>
+      <div class="s-d">   
+        <div class="sex"> 
+      <h3>Sex</h3>
+    <p-selectButton formControlName="sex" [(ngModel)]="value1" [options]="stateOptions"  optionLabel="label" optionValue="value"></p-selectButton>
+  </div>
+  <div class="date">
+      <h3 >Date of birth</h3>
       <p-calendar formControlName="birth" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
-     <br>
-      <label for=""> Account Type</label>
-      <mat-radio-group formControlName="type" class="ra_group">
-        <mat-radio-button class="ra_button" *ngFor="let fresh of account_type" [value]="fresh">
-            {{fresh}}
-        </mat-radio-button>
-      </mat-radio-group>
-      <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        
-        <input formControlName="email" matInput placeholder="Email">
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Phone</mat-label>
-        <input formControlName="phone" matInput type="number" placeholder="Phone">
-      </mat-form-field>
-      <div *ngIf="productForm.get('phone')?.errors && productForm.get('phone')?.touched">
-        <p *ngIf="productForm.get('phone')?.errors['required']">Phone is required</p>
-        <p *ngIf="productForm.get('phone')?.errors['minlength']">Wrong format</p>
+    </div>
+    </div> 
+    <br><br><br><br><br>
+    <div class="e-t">
+      <div class="ep">
+     <h3>Email</h3>
+     <input formControlName="email" type="text" pInputText placeholder="Email"> 
+   <br>
+       <div *ngIf="productForm.get('email')?.errors && productForm.get('email')?.touched">
+        <p style="color: red;" *ngIf="productForm.get('email')?.errors['required']">Email is required</p>
+        <p style="color: red;" *ngIf="productForm.get('email')?.errors['pattern']">Wrong format</p>
       </div>
-     
+      <h3>Phone</h3>
+        <input formControlName="phone" pInputText type="number" placeholder="Phone">
+        
+      <div *ngIf="productForm.get('phone')?.errors && productForm.get('phone')?.touched">
+        <p style="color: red;" *ngIf="productForm.get('phone')?.errors['required']">Phone is required</p>
+        <p style="color: red;" *ngIf="productForm.get('phone')?.errors['pattern']">Wrong format</p>
+      </div>
+    </div>
+    <div class="type">
+      <h3 for=""> Subject</h3>
+      <p-selectButton formControlName="type" [(ngModel)]="value3" [options]="stateOptions1"  optionLabel="label" optionValue="value"></p-selectButton>
+      <br> 
+    </div>
+</div>
 </div>
 </form>
-<div mat-dialog-action [align]="'end'">
-    <button mat-raised-button color="warn" mat-dialog-close>close</button>
-    <button mat-raised-button color="primary" style="margin-left: 8px;" (click)="addproduct('Bạn đã','lưu')">save</button>
+
+<div class="group-b" [align]="'end'">
+    <button  pButton  pRipple color="warn" class="p-button-success mr-2">Close</button>
+    <button  pButton  pRipple color="primary" style="margin-left: 8px;"  class="p-button" (click)="addproduct('You','Saved')">Save</button>
 
 </div>
