--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,23 +1,24 @@
 
-<mat-toolbar class="header">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <div>
-        <img class="logo" [src]="image" alt="">
-      </div>
-      
-    </button>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="search products">
-    </div>
-    <span class="fas fa-search search-icon"></span>
+<mat-toolbar class="header"  [ngStyle]="{backgroundColor:'var(--gray-900)'}">
+  <span style="color: #fff;">CRYPTO CHECKER YT</span>
+  <span class="example-spacer"></span>
+  
     <span class="example-spacer"></span>
     <p-tabMenu  [model]="items2" [activeItem]="activeItem" ></p-tabMenu>
-    <button mat-raised-button color="warn" (click)="openDialog()"> + Register</button>
-
+    <mat-form-field class="Curr" style="color: #fff;">
+      <mat-select (valueChange)="sendCurrency($event)" class="text-sm" [(ngModel)]="selectedCurrency">
+          <mat-option selected value="INR">INR</mat-option>
+          <mat-option value="USD">USD</mat-option>
+      </mat-select>
+  </mat-form-field>  
+    <div class="registers">
+    <button mat-raised-button color="primary" (click)="openDialog()"> + Register</button>
+  </div>
+  <div class="carts">
 <button routerLink="cart" class="btn btn-primary">
     <i style="font-size: 30px; color: aliceblue;" class="fas fa-cart-plus"></i>
     <div style="font-size: 10px;" class="badge bg-danger">{{totalItem}}</div>
 </button>
-
+</div>
 
   </mat-toolbar>
