--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -1,68 +1,23 @@
-<div class="container">
-    <div style="margin-top: 10px">
-        <mat-form-field appearance="standard">
-            <mat-label>Filter</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-          </mat-form-field>
-          
-          <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" matSort>
-          
-              <!-- ID Column -->
-              <ng-container matColumnDef="usename">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Your Name </th>
-                <td mat-cell *matCellDef="let row"> {{row.usename}} </td>
-              </ng-container>
-          
-              <!-- Progress Column -->
-              <ng-container matColumnDef="sex">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Sex </th>
-                <td mat-cell *matCellDef="let row"> {{row.sex}} </td>
-              </ng-container>
-          
-              <!-- Name Column -->
-              <ng-container matColumnDef="birth">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date of birth </th>
-                <td mat-cell *matCellDef="let row"> {{row.birth | date}} </td>
-              </ng-container>
-              <ng-container matColumnDef="phone">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone </th>
-                <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
-              </ng-container>
-              
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-                <td mat-cell *matCellDef="let row"> {{row.email}} </td>
-            </ng-container>
-             <!-- Fruit Column -->
-             <!-- Fruit Column -->
-             <ng-container matColumnDef="type">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Type </th>
-              <td mat-cell *matCellDef="let row"> {{row.type}} </td>
-            </ng-container>
-          <!-- Fruit Column -->
-              <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Manipulate </th>
-                <td mat-cell *matCellDef="let row"> 
-                   <button mat-icon-button color="primary" (click)="editProduct(row)">
-                     <mat-icon>edit</mat-icon>
-                   </button>
-                   <button mat-icon-button color="warn" (click)="deleteProduct(row.id)">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-                </td>
-              </ng-container> 
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              
-              <!-- Row shown when there is no matching data. -->
-              <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-              </tr>
-            </table>
-          
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-          </div>
-    </div>
-</div>
+<p-table [value]="user" responsiveLayout="scroll">
+  <ng-template pTemplate="header">
+      <tr>
+          <th>Username</th>
+          <th>Sex</th>
+          <th>Birth day</th>
+          <th>Phone</th>
+          <th>Email</th>
+          <th>Subject</th>
+      </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-user>
+      <tr>
+          <td>{{user.username}}</td>
+          <td>{{user.Sex}}</td>
+          <td>{{user.birth}}</td>
+          <td>{{user.phone}}</td>
+          <td>{{user.email}}</td>
+          <td>{{user.type}}</td>
+      </tr>
+  </ng-template>
+</p-table>
