--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -25,7 +25,8 @@
                             <td style="width: 12%;">{{item.quantity}}</td>
                             <td style="width: 12%;">{{item.total}}</td>
                             <td>
-                                <button (click)="removeItem(item)" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                                <button (click)="removeItem(item)" class="btn btn-danger"><i
+                                        class="fas fa-trash-alt"></i></button>
                             </td>
                         </tr>
                         <tr>
@@ -49,7 +50,8 @@
             <h5 class="card-title">My Cart</h5>
         </div>
         <div class="center">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfYD08syiXbB8i8AZ8z1q-6Epm4QSz3YaoSw&usqp=CAU" alt="">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfYD08syiXbB8i8AZ8z1q-6Epm4QSz3YaoSw&usqp=CAU"
+                alt="">
             <h4>Your cart is empty!</h4>
             <h6>Add item to it now</h6>
             <button routerLink="/products" class="btn btn-primary">Shop Now</button>
