--- a/src/app/component/content/content.component.html
+++ b/src/app/component/content/content.component.html
@@ -1,13 +1,10 @@
-
 <div class="menubar">
-    <h2 > Menu</h2>
+  <h2 class="menu"> Menu</h2>
   <p-tieredMenu [model]="items">
-    <ng-content></ng-content>    
+    <ng-content></ng-content>
   </p-tieredMenu>
-  </div>
-  <div class="display">
+</div>
+<div class="display">
   <div class="page-content">
-      <router-outlet></router-outlet>
-      
+    <router-outlet></router-outlet>
   </div>
- 
