--- a/src/app/component/dialog/dialog.component.html
+++ b/src/app/component/dialog/dialog.component.html
@@ -1,57 +1,63 @@
-<h1 > Register</h1>
+<h1> Register</h1>
 <form [formGroup]="productForm">
-<div p-dialog-content>
-  <h3>Usenamer</h3>
-  <div class="col-12 md:col-4">
-    <div class="p-inputgroup">
+  <div p-dialog-content>
+    <h3>Username(<span style="color: red;">*</span>)</h3>
+    <div class="col-12 md:col-4">
+      <div class="p-inputgroup">
         <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-        <input formControlName="usename" style="width: 300px;" type="text" pInputText placeholder="Username">         
-    </div>
-</div>
-      <div *ngIf="productForm.get('usename')?.errors && productForm.get('usename')?.touched">
-        <p  style="color: red;" *ngIf="productForm.get('usename')?.errors['required']">Username is required</p>
-        <p style="color: red;" *ngIf="productForm.get('usename')?.errors['minlength']">Username must long on 5 character</p>
+        <input formControlName="username" style="width: 300px;" type="text" pInputText placeholder="Username">
       </div>
-      <br>
-      <div class="s-d">   
-        <div class="sex"> 
-      <h3>Sex</h3>
-    <p-selectButton formControlName="sex" [(ngModel)]="value1" [options]="stateOptions"  optionLabel="label" optionValue="value"></p-selectButton>
-  </div>
-  <div class="date">
-      <h3 >Date of birth</h3>
-      <p-calendar formControlName="birth" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
     </div>
-    </div> 
+    <div *ngIf="productForm.get('username')?.errors && productForm.get('username')?.touched">
+      <p style="color: red;" *ngIf="productForm.get('username')?.errors['required']">Username is required</p>
+      <p style="color: red;" *ngIf="productForm.get('username')?.errors['minlength']">Username must long on 5 character
+      </p>
+    </div>
+    <br>
+    <div class="s-d">
+      <div class="sex">
+        <h3>Gender(<span style="color: red;">*</span>)</h3>
+        <p-selectButton formControlName="sex" [(ngModel)]="value1" [options]="stateOptions" optionLabel="label"
+          optionValue="value"></p-selectButton>
+      </div>
+      <div class="date">
+        <h3>Date of birth(<span style="color: red;">*</span>)</h3>
+        <p-calendar formControlName="birth" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+      </div>
+    </div>
     <br><br><br><br><br>
     <div class="e-t">
       <div class="ep">
-     <h3>Email</h3>
-     <input formControlName="email" type="text" pInputText placeholder="Email"> 
-   <br>
-       <div *ngIf="productForm.get('email')?.errors && productForm.get('email')?.touched">
-        <p style="color: red;" *ngIf="productForm.get('email')?.errors['required']">Email is required</p>
-        <p style="color: red;" *ngIf="productForm.get('email')?.errors['pattern']">Wrong format</p>
+        <h3>Email(<span style="color: red;">*</span>)</h3>
+        <input formControlName="email" type="text" pInputText placeholder="Email">
+        <br>
+        <div *ngIf="productForm.get('email')?.errors && productForm.get('email')?.touched">
+          <p style="color: red;" *ngIf="productForm.get('email')?.errors['required']">Email is required</p>
+          <p style="color: red;" *ngIf="productForm.get('email')?.errors['pattern']">Wrong format</p>
+        </div>
+        <h3>Phone(<span style="color: red;">*</span>)</h3>
+        <input formControlName="phone" pInputText type="text" placeholder="Phone" [maxLength]="10" [minlength]="10">
+
+        <div *ngIf="productForm.get('phone')?.errors && productForm.get('phone')?.touched">
+          <p style="color: red;" *ngIf="productForm.get('phone')?.errors['required']">Phone is required</p>
+          <p style="color: red;" *ngIf="productForm.get('phone')?.errors['pattern']">Wrong format</p>
+        </div>
       </div>
-      <h3>Phone</h3>
-        <input formControlName="phone" pInputText type="number" placeholder="Phone">
-        
-      <div *ngIf="productForm.get('phone')?.errors && productForm.get('phone')?.touched">
-        <p style="color: red;" *ngIf="productForm.get('phone')?.errors['required']">Phone is required</p>
-        <p style="color: red;" *ngIf="productForm.get('phone')?.errors['pattern']">Wrong format</p>
+      <div class="type">
+        <h3 for=""> Subject(<span style="color: red;">*</span>)</h3>
+        <p-selectButton formControlName="type" [(ngModel)]="value3" [options]="stateOptions1" optionLabel="label"
+          optionValue="value"></p-selectButton>
+        <br>
       </div>
     </div>
-    <div class="type">
-      <h3 for=""> Subject</h3>
-      <p-selectButton formControlName="type" [(ngModel)]="value3" [options]="stateOptions1"  optionLabel="label" optionValue="value"></p-selectButton>
-      <br> 
-    </div>
-</div>
-</div>
+  </div>
 </form>
 
 <div class="group-b" [align]="'end'">
-    <button  pButton  pRipple color="warn" class="p-button-success mr-2">Close</button>
-    <button  pButton  pRipple color="primary" style="margin-left: 8px;"  class="p-button" (click)="addproduct('You','Saved')">Save</button>
+  <!-- <button pButton pRipple class="p-button-success mr-2" class="p-button-secondary" (click)=" close()">Close</button>
+  <button pButton pRipple color="primary" style="margin-left: 8px;" class="p-button"
+    (click)="addproduct('You','Saved')">Save</button> -->
 
 </div>
+
+<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
