--- a/src/app/component/product/product.component.css
+++ b/src/app/component/product/product.component.css
@@ -39,9 +39,16 @@
     transition: 0.3s ease-in-out;
     transform: scale(1.1);
 }
+
 button {
     min-width: 10rem;
     margin-right: .5rem;
+}
+
+.load {
+    display: block;
+    margin-top: 500px;
+    margin-left: 800px;
 }
 
 @media screen and (max-width: 960px) {
@@ -51,3 +58,44 @@ button {
     }
 }
 
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
+    animation: custom-progress-spinner-dash 1.5s ease-in-out infinite, custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+
+    100%,
+    0% {
+        stroke: #16697A;
+    }
+
+    40% {
+        stroke: #489FB5;
+    }
+
+    66% {
+        stroke: #82C0CC;
+    }
+
+    80%,
+    90% {
+        stroke: #FFA62B;
+    }
+}
+
+@keyframes custom-progress-spinner-dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+
+    50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+    }
+
+    100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+    }
+}
