--- a/src/app/component/coin-list/coin-list.component.html
+++ b/src/app/component/coin-list/coin-list.component.html
@@ -35,12 +35,8 @@
             [showCurrentPageReport]="true">
             <ng-template pTemplate="caption">
                 <div class="flex align-items-center justify-content-between">
-                    <h3 class="m-0">Manage Products</h3>
-                    <span class="p-input-icon-left">
-                        <i class="pi pi-search"></i>
-                        <input pInputText type="text" (input)="dt.filterGlobal($event.target, 'contains')"
-                            placeholder="Global Search" />
-                    </span>
+                    <h3 class="m-0"> coin market</h3>
+                 
                 </div>
             </ng-template>
             <ng-template pTemplate="header">
