--- a/src/app/component/coin-list/coin-list.component.scss
+++ b/src/app/component/coin-list/coin-list.component.scss
@@ -25,7 +25,7 @@
 }
 
 .banner {
-    background-image: url('../../../assets/coin4.jpeg');
+    background-image: url('../../../assets/coin2.png');
     height: 400px;
     width: 100%;
 }
