--- a/src/app/component/coin-list/coin-list.component.scss
+++ b/src/app/component/coin-list/coin-list.component.scss
@@ -88,3 +88,9 @@ th {
 :host ::ng-deep tr.mat-row {
     height: 70px;
 }
+
+.load {
+    display: block;
+    margin-top: 700px;
+    margin-left: 800px;
+  }
