--- a/src/app/component/register/register.component.css
+++ b/src/app/component/register/register.component.css
@@ -80,3 +80,82 @@ th {
   height: 20px;
   margin-left: 5px;
 }
+
+.load {
+  display: block;
+  margin-top: 500px;
+  margin-left: 800px;
+}
+
+@media screen and (max-width: 960px) {
+  button {
+      width: 100%;
+      margin-bottom: .5rem;
+  }
+}
+
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
+  animation: custom-progress-spinner-dash 1.5s ease-in-out infinite, custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+
+  100%,
+  0% {
+      stroke: #16697A;
+  }
+
+  40% {
+      stroke: #489FB5;
+  }
+
+  66% {
+      stroke: #82C0CC;
+  }
+
+  80%,
+  90% {
+      stroke: #FFA62B;
+  }
+}
+
+@keyframes custom-progress-spinner-dash {
+  0% {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+  }
+
+  50% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -35px;
+  }
+
+  100% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -124px;
+  }
+}
+.box {
+  background-color: var(--surface-e);
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 4px;
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+}
+
+.box-stretched {
+  height: 100%;
+}
+
+.vertical-container {
+  margin: 0;
+  height: 200px;
+  background: var(--surface-d);
+  border-radius: 4px;
+}
+
+.nested-grid .p-col-4 {
+  padding-bottom: 1rem;
+}
